[tool.poetry]
name = "vaisala"
version = "0.1.0"
description = "Vaisala Mqtt publisher"
authors = ["Óscar García"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
paho-mqtt = "^1.6.1"
timeloop = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
